--- a/estilos/home.css
+++ b/estilos/home.css
@@ -130,17 +130,105 @@ main{
     background-size: cover;
     background-position: center;
 }
+#telaMenor{
+    display: none;
+}
 
 @media screen and (max-width: 800px){
+    header{
+        height: auto;
+    }
+    #conteudo{
+        width: 100%;
+    }
+    #banner{
+        width: 100%;
+        margin-top: 10px;
+    }
+    #imagemUm{
+        height: 150px;
+    }
+    #imagemDois{
+        height: 150px;
+    }
+    #imagemTres{
+        height: 150px;
+    }
     #separacao{
         display: none;
     }
-    #navegacao{
+    #navegacao ul{
         display: none;
+    }
+    #navegacao{
+        width: 100%;
+    }
+    #telaMenor{
+        background-color: aliceblue;
+        transition: 1s;
+    }
+    #telaMenor li:hover{
+        background-color: gray;
+    }
+    #telaMenorBotao{
+        background-image: url("../imagens/menuLateral.jpg");
+        background-size: 20px;
+        background-position: left;
+        background-repeat: no-repeat;
+        height: 30px;
+        width: 100%;
+    }
+    #fecharTelaMenor{
+        background-image: url("../imagens/menuLateral.jpg");
+        background-size: 20px;
+        background-position: left;
+        background-repeat: no-repeat;
+        height: 30px;
+        width: 100%;
     }
     nav{
         width: 100%;
         background-color: aliceblue;
+        border: black solid 1px;
+    }
+    nav form{
+        width: 50px;
+        display: flex;
+    }
+    nav form input{
+        width: 0px;
+    }
+    #botoesLogin a{
+        display: none;
+    }
+    #livros{
+        width: 40%;
+        height: 180px;
+
+    }
+    #livros img{
+        width: auto;
+        height: 100px;
+    }
+    #livros button{
+        font-size: 10pt;
+        height: 25px;
+    }
+    .nomePreco{
+        font-size: 10pt;
+        height: 50px;
+    }
+    .nomeDoLivro{
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    
+    }
+    .precoAntes{
+        font-size: 8pt;
+    }
+    .promocao{
+        font-size: 8pt;
     }
 
 }
