--- a/estilos/geral.css
+++ b/estilos/geral.css
@@ -47,9 +47,6 @@ nav{
     width: 100%;
     background-color: aliceblue;
 }
-nav ul li{
-    width: 200px;
-}
 nav ul li:hover{
     font-weight: bold;
 }
@@ -66,4 +63,7 @@ nav ul li:hover{
     height: 30px;
     background-color: rgba(240, 248, 255, 0);
     border: 0ch;
+}
+#telaMenor{
+    display: none;
 }
