--- a/estilos/home.css
+++ b/estilos/home.css
@@ -4,7 +4,14 @@ main{
     background-size: 100%;
     background-position: center;
     background-repeat: repeat;
+}
+section{
+    background-color: lightgray;
+    box-shadow: 0px 30px 30px 0px black;
 
+}
+#banner{
+    margin-top: 10px;
 }
 #separacao{
     width: 13%;
@@ -77,7 +84,11 @@ main{
 #categorias{
     border: 1px black solid;
     padding: 10px;
+    font-size: 11pt;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+    
 #anos{
     border: 1px black solid;
     padding: 10px;
@@ -132,103 +143,4 @@ main{
 }
 #telaMenor{
     display: none;
-}
-
-@media screen and (max-width: 800px){
-    header{
-        height: auto;
-    }
-    #conteudo{
-        width: 100%;
-    }
-    #banner{
-        width: 100%;
-        margin-top: 10px;
-    }
-    #imagemUm{
-        height: 150px;
-    }
-    #imagemDois{
-        height: 150px;
-    }
-    #imagemTres{
-        height: 150px;
-    }
-    #separacao{
-        display: none;
-    }
-    #navegacao ul{
-        display: none;
-    }
-    #navegacao{
-        width: 100%;
-    }
-    #telaMenor{
-        background-color: aliceblue;
-        transition: 1s;
-    }
-    #telaMenor li:hover{
-        background-color: gray;
-    }
-    #telaMenorBotao{
-        background-image: url("../imagens/menuLateral.jpg");
-        background-size: 20px;
-        background-position: left;
-        background-repeat: no-repeat;
-        height: 30px;
-        width: 100%;
-    }
-    #fecharTelaMenor{
-        background-image: url("../imagens/menuLateral.jpg");
-        background-size: 20px;
-        background-position: left;
-        background-repeat: no-repeat;
-        height: 30px;
-        width: 100%;
-    }
-    nav{
-        width: 100%;
-        background-color: aliceblue;
-        border: black solid 1px;
-    }
-    nav form{
-        width: 50px;
-        display: flex;
-    }
-    nav form input{
-        width: 0px;
-    }
-    #botoesLogin a{
-        display: none;
-    }
-    #livros{
-        width: 40%;
-        height: 180px;
-
-    }
-    #livros img{
-        width: auto;
-        height: 100px;
-    }
-    #livros button{
-        font-size: 10pt;
-        height: 25px;
-    }
-    .nomePreco{
-        font-size: 10pt;
-        height: 50px;
-    }
-    .nomeDoLivro{
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-    
-    }
-    .precoAntes{
-        font-size: 8pt;
-    }
-    .promocao{
-        font-size: 8pt;
-    }
-
 }
