--- a/estilos/paginaCompra.css
+++ b/estilos/paginaCompra.css
@@ -25,6 +25,18 @@ button:hover{
     font-weight:bolder;
     box-shadow: 0px 10px 10px 0px black;
 }
+@media screen and (max-width: 500px) {
+    section div input{
+        width: 70px;
+    }
+    #cartao{
+        width: 180px;
+    }
+    
+    
+}
+
+
 
 
 
