--- a/estilos/styleResponsividade.css
+++ b/estilos/styleResponsividade.css
@@ -1,4 +1,3 @@
-@media screen and (max-width: 800px){
     header{
         height: auto;
     }
@@ -62,8 +61,23 @@
     #telaMenor ul li form input{
         width: 100px;
     }
-    #botoesLogin a{
-        display: none;
+    #botoesLogin button{
+        width: 70px;
+        height: 20px; 
+    }
+    #btnEntrar{
+        font-size: 8pt;
+    }
+    #btnCadastrar{
+        font-size: 8pt;
+    }
+    #nomeSite h1{
+        text-align: left;
+        font-size: larger;
+        vertical-align: middle;
+    }
+    #nomeSite{
+        
     }
     #livros{
         width: 40%;
@@ -95,12 +109,10 @@
         font-size: 8pt;
     }
     #caixa{
-        width: auto;
+        width: 80%;
+        display: flex;
+        flex-wrap:wrap ;
     }
-    section div label, section div input, section div select{
-        width: 10px;
+    section div label, section div input, section div select, div h3, div p, div button{
         font-size: smaller;
-
     }
-
-}
